app/styles/button.scss
button, a[button], div[button] {

	height:auto;
	cursor:pointer;
	font-size:1em;
	font-weight:600;
	line-height:26px;
	padding:10px 20px;
	align-items:center;
	border-radius:50px;
	display:inline-flex;
	justify-content:center;
	letter-spacing:0.005em;
	background:transparent;
	color:var(--text-color);
	transition:all .4s ease-in-out;
	-webkit-backdrop-filter:blur(15px);
	backdrop-filter:blur(15px);
	border:1.5px solid rgba(255,255,255,0.3);

	@include media(max-width-1024) {
		-webkit-backdrop-filter:blur(15px);
		backdrop-filter:blur(15px);
	}

	@include media(max-width-642) {
		width:90%;
	}


	i {
		transition:all .4s ease-in-out;
	}

	span {
		font-size:20px;

		@include media(max-width-962) {
			font-size:16px;
		}

		@include media(max-width-768) {
			font-size:14px;
		}
	}

	span + i {
		font-size:20px;
		padding-left:10px;
	}

	i + span {
		padding-left:10px;
	}

	& i {
		color:var(--text-color);
	}

	& > div {
		width:100%;
		height:100%;
		display:flex;
		border-radius:50px;
		align-items:center;
		justify-content:center;
		padding:0px !important;
	}

	&:hover {

		color:var(--back-color);
		border-color:var(--text-color);
		background-color:var(--text-color);

		i {
			color:var(--back-color);
		}

	}

	&[form] {
		width:100%;
		border-radius:0px;
	}

	&[surrealist] {
		@include media(max-width-1024) {
			display:none;
		}
	}

	&[white] {

		color:var(--white-color);
		border-color:var(--white-color);

		& i {
			color:var(--white-color);
		}

		&:hover {

			color:var(--black-color);
			border:2px solid var(--white-color);
			background-color:var(--white-color);

			i {
				color:var(--black-color);
			}

		}

	}

	p > & {

		margin:0 30px 30px 0;

		@include media(max-width-768) {
			margin:0 0px 15px 0;
		}

	}

	&[careers] {

		div {
			font-size:14px;
		}

		border-color:var(--faint-color);

		&:hover {
			border-color:var(--black-color);
		}

	}

}

